# VideoTuna

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README1.md  changelog.md  docker-compose.yml  env1.txt  env2.txt  mp42gif.py  mp42gif.sh  pyproject.toml  requirements.txt  save.txt  scripts.py
cogVideo/: README.md  inference_diffusers.py  readme_cogVideo.md  readme_cogvideo.md  requirements_cogVideo.txt
configs/000_videocrafter/: vc1_i2v_512.yaml  vc1_t2v_1024.yaml
configs/001_videocrafter2/: vc2_rlhf.yaml  vc2_t2v_320x512.yaml  vc2_t2v_lora.yaml
configs/002_dynamicrafter/: dc_i2v_1024.yaml
configs/003_opensora/: opensorav10_256x256.yaml
configs/004_cogvideox/: cogvideo.yaml  cogvideo2b.yaml  cogvideo5b-i2v.yaml  cogvideo5b.yaml  cogvideox_2b_t2v.yaml  cogvideox_5b_i2v.yaml  cogvideox_5b_t2v.yaml  inference_2b_t2v.yaml  inference_5b_i2v.yaml  inference_5b_t2v.yaml
configs/005_cogvideox1.5/: cogvideox1.5_5b.yaml  cogvideox1.5_5b_i2v.yaml  inference1.5_5b_i2v.yaml  inference1.5_5b_t2v.yaml  prompt.txt
configs/006_flux/: config.json  multidatabackend.json
configs/inference/: cogvideo_t2v_pl.yaml  dc_i2v_1024.yaml  opensora_v10_16x256x256.py  opensora_v12_720p.py  test_prompt.txt  vc1_i2v_512.yaml  vc1_t2v_1024.yaml  vc1_t2v_512.yaml  vc2_t2v_512.yaml  vc2_t2v_512_lora.yaml
data/: datasets.py  datasets_utils.py  macvid.py  transforms.py  video_transforms.py
data/anno_files/: toy_image_dataset.csv  toy_video_dataset.csv
data/process/: README.md  scenecut.py
docker/: Dockerfile  start_docker.sh
docker/poetry/: Dockerfile
docs/: CHECKPOINTS.md  datasets.md  evaluation.md  finetune_flux.md
eval/: README.md  eval.sh  eval_custom.sh  requirements_vbench.txt
eval/prompts/: vbench_all_dimension.txt
eval/scripts/: evaluation.py  tabular_score.py
eval/vbench/: __init__.py  aesthetic_quality.py  appearance_style.py  background_consistency.py  color.py  dynamic_degree.py  human_action.py  imaging_quality.py  motion_smoothness.py  multiple_objects.py  object_class.py  overall_consistency.py  scene.py  spatial_relationship.py  subject_consistency.py  temporal_flickering.py  temporal_style.py  utils.py
scripts/: __init__.py  inference.py  inference_cogVideo_diffusers.py  inference_cogVideo_sat.py  inference_cogVideo_sat_refactor.py  inference_cogvideo.py  inference_dc_i2v_576x1024.sh  inference_ddp.py  inference_flux.py  inference_flux.sh  inference_flux_dev.py  inference_flux_lora.py  inference_flux_schnell.py  inference_hunyuan.py  inference_hunyuan_diffusers.py  inference_mochi.py  inference_opensora.py  inference_opensora_v10.py  inference_opensora_v12.py  inference_t2v_vc2.sh  inference_utils.py  inference_v2v_ms.py  inference_vc2_t2v_320x512.sh  train.py  train_flux.py  train_flux_lora.py  train_pl_v18.py  train_utils.py
shscripts/: inference_cogVideo_diffusers.sh  inference_cogVideo_i2v_diffusers.sh  inference_cogVideo_sat.sh  inference_cogVideo_t2v_diffusers.sh  inference_cogVideox1.5_5b_i2v.sh  inference_cogVideox1.5_5b_t2v.sh  inference_cogVideox1.5_5b_t2v_sat.sh  inference_cogvideo.sh  inference_cogvideo_i2v_lora.sh  inference_cogvideo_lora.sh  inference_cogvideo_pl.sh  inference_dc_i2v_576x1024.sh  inference_dc_interp_320x512.sh  inference_flux.sh  inference_flux_dev.sh  inference_flux_lora.sh  inference_flux_schnell.sh  inference_hunyuan_diffusers.sh  inference_mochi.sh  inference_opensora_16x256x256.sh  inference_opensora_v10_16x256x256.sh  inference_opensora_v12_720p.sh  inference_v2v_ms.sh  inference_vc1_i2v_320x512.sh  inference_vc1_t2v_576x1024.sh  inference_vc2_t2v_320x512.sh  inference_vc2_t2v_320x512_lora.sh  train_cogvideox_i2v_lora.sh  train_cogvideox_lora.sh  train_cogvideox_t2v_lora.sh  train_dynamicrafter.sh  train_flux.sh  train_opensorav10.sh  train_videocrafter.sh  train_videocrafter_lora.sh  train_videocrafter_v2.sh
tools/: convert_checkpoint.py  unzip_vript.py  vript_anno_converter.py
utils/: callbacks.py  load_weights.py  load_weigths.py
(+466 files in other folders)
